add student_task, change new task page, etc
